# neonswarm

./: .dockerignore  .gitattributes  .gitignore  .helmignore  CLAUDE.md  Chart.yaml  LICENSE  Makefile  README.md  deploy.sh  requirements.txt  values.example.yaml  values.schema.json
charts/: lcd-storage-1.0.0.tgz  led-sniffer-1.0.0.tgz
charts/agent/: Chart.yaml  values.yaml
charts/agent/templates/: _helpers.tpl  deployment.yaml  persistentVolume.yaml  secret.yaml
charts/lcd-storage/: .helmignore  Chart.yaml  values.yml
charts/lcd-storage/templates/: _helpers.tpl  daemonset.yaml  daemonset.yml  role.yaml  rolebinding.yaml  sa.yaml
charts/led-sniffer/: Chart.yaml  values.yaml
charts/led-sniffer/templates/: _helpers.tpl  daemonset.yaml
libs/: pyproject.toml
libs/src/utils/: conversion.py  loggable.py  parsing.py
src/storage-node/: lcd_storage.py  led_sniffer.py
src/storage-node/tests/: button.py
src/storage-node/utils/: parsing.py
storage-node/: led_sniffer.py  server.py
storage-node/lcd_storage/: Dockerfile  README.md  pyproject.toml
storage-node/lcd_storage/src/: lcd_storage.py  render.py
storage-node/lcd_storage/src/k8s/: k8s_monitor.py
storage-node/lcd_storage/src/lcd/: lcd.py
storage-node/lcd_storage/src/storage_monitor/: storage_monitor.py
storage-node/lcd_storage/tests/: conftest.py  test_lcd.py  test_render.py
storage-node/led/: strip.py
storage-node/led/animations/: ReverseChase.py
storage-node/led_sniffer/: Dockerfile  README.md  pyproject.toml
storage-node/led_sniffer/src/: led_sniffer.py
storage-node/led_sniffer/src/led/: strip.py
storage-node/led_sniffer/src/sniffer/: sniffer.py
storage-node/led_sniffer/src/threshold_sniffer/: byte_accumulator.py  threshold_sniffer.py
storage-node/led_sniffer/tests/: conftest.py  test_byte_accumulator.py  test_threshold_sniffer.py
storage-node/tests/: button.py  led_animation.py
storage-node/utils/: parsing.py
templates/: NOTES.txt
