[project]
name = "led-sniffer"
version = "1.0.0"
description = "TCP packet sniffer with LED notifications"
authors = [
  { name = "marmos91", email = "hello@cubbit.io" }
]
license = { text = "MIT" }
readme = "../README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "scapy>=2.6.1,<2.7",
  "adafruit-blinka>=7.0.0",
  "lgpio>=0.2.2.0,<0.3.0.0",
  "rpi-gpio>=0.7.1,<0.8.0",
  "adafruit-blinka-raspberry-pi5-neopixel>=1.0.0rc2,<2.0.0",
  "adafruit-circuitpython-pixelbuf>=2.0.7,<3.0.0",
  "adafruit-circuitpython-led-animation>=2.11.1,<3.0.0",
  "gpiozero>=2.0.1,<3.0.0",
  "rpi-ws281x>=5.0.0,<6.0.0",
  "rplcd>=1.4.0,<2.0.0"
]

[project.scripts]
led-sniffer = "led_sniffer:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
